Bug 453390 - Dragging an image to the desktop crashes plasmashell
Summary: Dragging an image to the desktop crashes plasmashell
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: git master
Platform: openSUSE Linux
: VHI crash
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-05-04 14:39 UTC by Fushan Wen
Modified: 2022-05-13 00:07 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2022-05-04 14:39:25 UTC
SUMMARY
Dragging an image to the desktop crashes plasmashell. 

This commit seems to be the cause: https://invent.kde.org/frameworks/kio/-/commit/879024a4a10f7ee5570b0e41519036dcbf8bb127


STEPS TO REPRODUCE
1. Open Dolphin
2. Drag an image from Dolphin to the desktop

OBSERVED RESULT
Crash

EXPECTED RESULT
No crash

SOFTWARE/OS VERSIONS
KIO  at https://invent.kde.org/frameworks/kio/-/commit/879024a4a10f7ee5570b0e41519036dcbf8bb127
Comment 1 Nate Graham 2022-05-04 15:33:48 UTC
Jan, can you look into this ASAP? We can't let this get shipped with Frameworks 5.94 (which is tagged in three days).
Comment 2 Fushan Wen 2022-05-05 03:28:26 UTC
Git commit d8c79c5bc25e14b92d3fd1f1c50e80826009e83f by Fushan Wen.
Committed on 05/05/2022 at 03:09.
Pushed by cblack into branch 'master'.

dropjob: Extract Ark data in ctor

Extract everything from the dropevent, since it will be deleted before
the job starts.

M  +18   -12   src/widgets/dropjob.cpp

https://invent.kde.org/frameworks/kio/commit/d8c79c5bc25e14b92d3fd1f1c50e80826009e83f
Comment 3 Fushan Wen 2022-05-13 00:07:18 UTC
Git commit 21ded1113e1a813a0cc84e0012096ab1b72e845c by Fushan Wen.
Committed on 13/05/2022 at 00:05.
Pushed by fusionfuture into branch 'master'.

foldermodel: don't early return if mimeData has empty urls in `FolderModel::drop`

This makes the "Ark drag-and-drop" work again.

M  +9    -0    containments/desktop/plugins/folder/foldermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/21ded1113e1a813a0cc84e0012096ab1b72e845c