dropjob: Extract Ark data in ctor

Extract everything from the dropevent, since it will be deleted before
the job starts.

BUG: 453390